# iplike

./: .gitignore  .gitmodules  Makefile.am  README.md  am_rpm_init.m4  autogen.sh  configure.ac  install_iplike.sh.in  iplike-cmd.c  iplike.c  iplike.spec.in  tests.sh  version.m4
.github/workflows/: iplike-build.yaml  oci-build-env.yaml
debian/: changelog  changelog.in  changelog.tmpl  control  control.in  control.tmpl  copyright  dirs  dirs.in  dirs.tmpl  links  overrides  overrides.in  overrides.tmpl  postinst  postinst.in  postinst.tmpl  prerm  prerm.in  prerm.tmpl  rules  rules.in  rules.tmpl  setver.sh  setver.sh.in  templates
debian/po/: templates.pot
oci-build-env/: Dockerfile.tpl  Makefile  release.tag  version-lock.sh
